them up somewhat.  I'd still like to do a little cleaning in here yet.

grap is now *much* more tolerant of variables with the keword names.
Things like

from=1; to = 10 
for i from from to to do { ... }

now work.  This is due to a sizable rewrite of the tokenizer.  Bruce
Lilly has been asking for this for a while. :-) I'll probably neaten
that code up at some point, too.

Added some GNU standard Makefile targets to the Makefile.

Many additional compatibility changes suggested by Bruce Lilly.

1.11: Strings are now clipped, thanks to John Heidemann for finding the error.

1.10: Cleaned up the automatic tick generation and fixed a bug in
there, too.  

Allow reassignment of coordinate system parameters, e.g.,
.G1
coord test
copy "examples/cy_fatal.d"
coord test x 1980,2000
.G2

Default line format now uses the bullet macro if it's defined.  The
coord statement now will accept multiple log scale modifiers.  The
statement

coord x 1,1000 log x log y

is now legal.  x and y are now legal variable names.  They used to be
language tokens, and in fact still are, although their scope as tokens
is now limited to coord statements.

Tried to streamline the use of for_each and functors by removing
trivial calls to for_each.  Still trying to move code out of grap.y to
make it shorter to compile.

Simplified expression grammar by disallowing logical expressions
outside if statements.  I also caught another memory leak here.

Signifying a line break by using new (or draw) now works.  So code like
.G1
draw solid
next at 2,4
next at 3,5
new
next at 4,6
next at 5,7
.G2
produces 2 solid line segments.  This forced a little rethinking of
the syntax for changing the properties of a line using new/draw.  The
implementation is on the man page.  If it breaks existing grap
scripts, I'd love to hear about it.

Grids support similar syntax to that of ticks for explicitly
requesting automatic grid generation.

Automatic tock or grid generation can now be requested relative to a